# tex-parser

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tex_parser/: __init__.py
src/tex_parser/file/: file_system.py
tests/: test_version.py
tests/file/: conftest.py  test_file_system.py
tests/file/fixtures/tex/: latex209_example.tex  latex2e_example.tex  latex2e_example_non_utf8.tex
tests/file/fixtures/txt/: non_utf8_sample.txt
