[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tex-parser"
version = "0.1.0"
description = "Python tool that parses TeX and LaTeX source files into structured representations of document hierarchy, text, mathematics, figures, citations, and macros."
authors = [{name = "Jason Stuber"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

